ingress-nginx/06-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/default-backend: "http-svc"
    #ingress.kubernetes.io/rewrite-target: /
  namespace: default
  name: beta-ingress
spec:
  tls:
  - secretName: beta-api # Name of the secret
    hosts:
    - beta-api.ytz.dforcepro.com
    - beta-api.x.dforcepro.com
    - beta-api.lzw.dforcepro.com
  rules:
  - host: beta-api.ytz.dforcepro.com # CHANGE ME!
    http:
      paths:
      # The * is needed so that all traffic gets redirected to nginx
      - path: /
        backend:
          serviceName: beta-ytzapi
          servicePort: 9080
  # - host: beta-api.x.dforcepro.com # CHANGE ME!
  #   http:
  #     paths:
  #     # The * is needed so that all traffic gets redirected to nginx
  #     - path: /
  #       backend:
  #         serviceName: beta-mongodb
  #         servicePort: 57001
